# submission-schema

./: .cruft.json  .env.template  .gitignore  .linkmllint.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  about.yaml  builder.Dockerfile  env_triad_pvs_sheet.owl  env_triad_pvs_sheet.owl.ttl  env_triad_pvs_sheet.yaml  geocoded_normalized_geo_loc_names.yaml  geocoding_log.txt  geocoding_table.tsv  get_value_set_curies.rq  get_value_set_curies.tsv  index.html  mkdocs.yml  mongo_biosample_geospatial_data.tsv  mongodb_lat_lon_diff.tsv  placeholder.md  portal_submitted_biosample_data.tsv  project.Makefile  pyproject.toml  qy2-config.tsv  sitemap.xml  soil_data.json  ubergraph-env-mat-SC-construct.ttl
Activity/: index.html
Agent/: index.html
Air/: index.html
AirInterface/: index.html
AnalysisTypeEnum/: index.html
ArchStrucEnum/: index.html
AttributeValue/: index.html
Biofilm/: index.html
BiofilmInterface/: index.html
BiolStatEnum/: index.html
Bioscales/: index.html
BioticRelationshipEnum/: index.html
Boolean/: index.html
BuildDocsEnum/: index.html
BuildOccupTypeEnum/: index.html
BuildingSettingEnum/: index.html
BuiltEnv/: index.html
BuiltEnvInterface/: index.html
CeilCondEnum/: index.html
CeilFinishMatEnum/: index.html
CeilTextureEnum/: index.html
CeilTypeEnum/: index.html
Checklist/: index.html
ChecklistPackageCombination/: index.html
ControlledIdentifiedTermValue/: index.html
ControlledTermValue/: index.html
CurLandUseEnum/: index.html
Curie/: index.html
DataObjectSubset/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DecimalDegree/: index.html
DeposEnvEnum/: index.html
DhInterface/: index.html
DhMultiviewCommonColumns/: index.html
DhMutliviewCommonColumns/: index.html
DhMutliviewCommonColumnsMixin/: index.html
DnaContTypeEnum/: index.html
DnaDnaseEnum/: index.html
DnaSampleFormatEnum/: index.html
DnaseRnaEnum/: index.html
DoorCompTypeEnum/: index.html
DoorCondEnum/: index.html
DoorDirectEnum/: index.html
DoorLocEnum/: index.html
DoorMatEnum/: index.html
DoorMoveEnum/: index.html
DoorTypeEnum/: index.html
DoorTypeMetalEnum/: index.html
DoorTypeWoodEnum/: index.html
Double/: index.html
DrainageClassEnum/: index.html
DrawingsEnum/: index.html
EMSL/: index.html
EMSL_store_temp/: index.html
EcosystemCategoryEnum/: index.html
EcosystemEnum/: index.html
EcosystemSubtypeEnum/: index.html
EcosystemTypeEnum/: index.html
Emsl/: index.html
EmslInterface/: index.html
EnvBroadScaleSoilEnum/: index.html
EnvLocalScaleSoilEnum/: index.html
EnvMediumSoilEnum/: index.html
EnvPackageEnum/: index.html
Environment/: index.html
ExtWallOrientEnum/: index.html
ExtWindowOrientEnum/: index.html
FaoClassEnum/: index.html
FilterTypeEnum/: index.html
Float/: index.html
FloorCondEnum/: index.html
FloorFinishMatEnum/: index.html
FloorStrucEnum/: index.html
FloorWaterMoldEnum/: index.html
FurnitureEnum/: index.html
GenderRestroomEnum/: index.html
GeolocationValue/: index.html
GrowthFacilEnum/: index.html
GrowthHabitEnum/: index.html
HandidnessEnum/: index.html
HcProducedEnum/: index.html
Hcr-cores/: index.html
Hcr-fluids-swabs/: index.html
HcrCores/: index.html
HcrCoresInterface/: index.html
HcrEnum/: index.html
HcrFluidsSwabs/: index.html
HcrFluidsSwabsInterface/: index.html
HcrGeolAgeEnum/: index.html
HeatCoolTypeEnum/: index.html
HeatDelivLocEnum/: index.html
Host-associated/: index.html
HostAssociated/: index.html
HostAssociatedInterface/: index.html
HostSexEnum/: index.html
IndoorSpaceEnum/: index.html
IndoorSurfEnum/: index.html
IntWallCondEnum/: index.html
Integer/: index.html
Investigation/: index.html
JGI_Metagenomics/: index.html
JGI_Metatranscriptomics/: index.html
JgiMg/: index.html
JgiMgInterface/: index.html
JgiMt/: index.html
JgiMtInterface/: index.html
LanguageCode/: index.html
LightTypeEnum/: index.html
LithologyEnum/: index.html
MIxS/: index.html
MIxS_(modified)/: index.html
MIxS_Inspired/: index.html
MIxS_NASSF/: index.html
MIxS_core/: index.html
MIxS_investigation/: index.html
MechStrucEnum/: index.html
Misc-envs/: index.html
MiscEnvs/: index.html
MiscEnvsInterface/: index.html
MixS_Modified/: index.html
MixsEnvironmentalTriad/: index.html
MixsExtension/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
NucleicAcidSequenceSource/: index.html
Objectidentifier/: index.html
OccupDocumentEnum/: index.html
OntologyClass/: index.html
OxyStatSampEnum/: index.html
Package/: index.html
PersonStatus/: index.html
Plant-associated/: index.html
PlantAssociated/: index.html
PlantAssociatedInterface/: index.html
PlantSexEnum/: index.html
ProfilePositionEnum/: index.html
QuadPosEnum/: index.html
QuantityValue/: index.html
RelSampLocEnum/: index.html
RelToOxygenEnum/: index.html
RnaContTypeEnum/: index.html
RnaSampleFormatEnum/: index.html
RoomCondtEnum/: index.html
RoomConnectedEnum/: index.html
RoomLocEnum/: index.html
RoomSampPosEnum/: index.html
RoomTypeEnum/: index.html
SampCaptStatusEnum/: index.html
SampCollectPointEnum/: index.html
SampDisStageEnum/: index.html
SampFloorEnum/: index.html
SampIdNewTermsMixin/: index.html
SampSubtypeEnum/: index.html
SampWeatherEnum/: index.html
SampleData/: index.html
SampleSubset/: index.html
SampleTypeEnum/: index.html
Sample_ID/: index.html
SeasonUseEnum/: index.html
Sediment/: index.html
SedimentInterface/: index.html
SedimentTypeEnum/: index.html
Sequencing/: index.html
ShadingDeviceCondEnum/: index.html
ShadingDeviceTypeEnum/: index.html
Soil/: index.html
SoilHorizonEnum/: index.html
SoilInterface/: index.html
SoilMixsInspiredMixin/: index.html
SpecificEcosystemEnum/: index.html
SpecificEnum/: index.html
SrDepEnvEnum/: index.html
SrGeolAgeEnum/: index.html
SrKerogTypeEnum/: index.html
SrLithologyEnum/: index.html
(+14862 files in other folders)
