[project]
name = "nmdc_submission_schema"
dynamic = ["version"]
description = "The NMDC submission schema"
authors = [{ name = "Mark Andrew Miller", email = "mam@lbl.gov" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "linkml-runtime>=1.6.2,<2",
    "rdflib>=6.2.0,<7",
]

[tool.poetry]
packages = [
    { include = "nmdc_submission_schema", from = "src" },
]
include = [
    # These files are copied from the top-level project folder at build time. Without
    # the copy step they end up in a weird location when installed via wheel.
    # See: https://github.com/python-poetry/poetry/issues/7153
    { path = "src/nmdc_submission_schema/project/**/*", format = ["sdist", "wheel"] }
]
exclude = [
    "tools"
]

# Keep the Poetry table because poetry-core still handles packaging details
# like src-layout package discovery and file inclusion for releases.
version = "0.0.0"

[dependency-groups]
dev = [
    "click>=8.1.0,<9",
    "db-dtypes>=1.3.1,<2",
    "duckdb>=1.1.3,<2",
    "duckdb-engine>=0.13.6,<0.14",
    "google-cloud-bigquery>=3.27.0,<4",
    "jupyter>=1.1.1,<2",
    "jupyter-datatables>=0.3.9,<0.4",
    "linkml>=1.9.4,<2",
    "matplotlib>=3.9.2,<4",
    "mkdocs-material>=9.1.2,<10",
    "mkdocs-mermaid2-plugin>=1.1.0,<2",
    "nmdc-schema==11.18.0",
    "oaklib>=0.6.1,<0.7", # was using 0.5.6 up to 2024-12-10
    "poetry-dynamic-versioning>=1.10.0,<2",
    "pydantic>=2.11.7,<3",
    "pytest>=8.3.4,<9",
    "pyyaml>=6.0.2,<7",
    "requests>=2.32.5,<3",
    "rich>=14.1.0,<15",
    "scikit-learn>=1.5.2,<2",
    "textdistance>=4.6.3,<5",
]

[tool.poetry-dynamic-versioning]
# We need poetry-dynamic-versioning to update the version in the src schema file,
# then generate project artifacts from that schema with the real version populated,
# and then perform any build or publish actions. Since this requires running
# `uv run poetry-dynamic-versioning` manually before `uv build`, we set enable = false.
# similar dynamic versioning doesn't seem to be working for nmdc-schema right now
enable = false
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "*.py",
    "src/**/__init__.py",
    "src/**/__version__.py",
    "src/**/_version.py",
    "src/nmdc_submission_schema/schema/nmdc_submission_schema.yaml"
]
patterns = [
    "(^\\s*__version__\\s*(?::.*?)?=\\s*['\\\"])[^'\\\"]*(['\\\"])",
    "(^version:\\s*['\\\"]?)[^'\\\"]*?(['\\\"]?)$"
]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
