[project]
name = "nmdc_submission_schema"
dynamic = ["version"]
description = "The NMDC submission schema"
authors = [{ name = "Mark Andrew Miller", email = "mam@lbl.gov" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "linkml-runtime>=1.6.2,<2",
    "rdflib>=6.2.0,<7",
]

[dependency-groups]
dev = [
    "click>=8.1.0,<9",
    "db-dtypes>=1.3.1,<2",
    "duckdb>=1.1.3,<2",
    "duckdb-engine>=0.13.6,<0.14",
    "google-cloud-bigquery>=3.27.0,<4",
    "jupyter>=1.1.1,<2",
    "jupyter-datatables>=0.3.9,<0.4",
    "linkml>=1.9.4,<2",
    "matplotlib>=3.9.2,<4",
    "mkdocs-material>=9.1.2,<10",
    "mkdocs-mermaid2-plugin>=1.1.0,<2",
    "nmdc-schema==11.18.0",
    "oaklib>=0.6.1,<0.7", # was using 0.5.6 up to 2024-12-10
    "pydantic>=2.11.7,<3",
    "pytest>=9.0.0,<10",
    "pyyaml>=6.0.2,<7",
    "requests>=2.32.5,<3",
    "rich>=14.1.0,<15",
    "scikit-learn>=1.5.2,<2",
    "textdistance>=4.6.3,<5",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/nmdc_submission_schema"]
artifacts = ["src/nmdc_submission_schema/project/**/*"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/nmdc_submission_schema",
]
artifacts = ["src/nmdc_submission_schema/project/**/*"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[tool.pytest]
# Add the current directory to the Python path so that tests can access the internal tools package
pythonpath = ["."]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } },
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.5.0,<1"]
build-backend = "hatchling.build"
